--- a/JupyterNotebook/Raw_Data_Preprocessing.ipynb
+++ b/JupyterNotebook/Raw_Data_Preprocessing.ipynb
@@ -38,9 +38,8 @@
    "id": "9f866919",
    "metadata": {},
    "source": [
-    "# Dataset\n",
+    "# [Dataset](https://www.yelp.com/dataset)\n",
     "\n",
-    "[Yelp Dataset](https://www.yelp.com/dataset)\n",
     "* yelp_academic_dataset_business.json\n",
     "* yelp_academic_dataset_review.json\n",
     "* yelp_academic_dataset_user.json\n",
